// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animated Twitch emotes have proper URLs and order 1`] = `
Array [
  Object {
    "imageType": "animated",
    "position": 0,
    "url": "https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_553fbd45762b4387b204c53285a93dbb/default/dark/3.0",
  },
  Object {
    "imageType": "animated",
    "position": 9,
    "url": "https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_447df256f3b1412b9fa0dfd3e9b6d84c/default/dark/3.0",
  },
]
`;

exports[`Duplicate Twitch emotes have proper URLs and order 1`] = `
Array [
  Object {
    "imageType": "static",
    "position": 0,
    "url": "https://static-cdn.jtvnw.net/emoticons/v1/304734759/3.0",
  },
  Object {
    "imageType": "animated",
    "position": 10,
    "url": "https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_447df256f3b1412b9fa0dfd3e9b6d84c/default/dark/3.0",
  },
  Object {
    "imageType": "static",
    "position": 20,
    "url": "https://static-cdn.jtvnw.net/emoticons/v1/304734759/3.0",
  },
]
`;

exports[`Non-animated Twitch emotes have proper URLs and order 1`] = `
Array [
  Object {
    "imageType": "static",
    "position": 0,
    "url": "https://static-cdn.jtvnw.net/emoticons/v1/301948071/3.0",
  },
  Object {
    "imageType": "static",
    "position": 8,
    "url": "https://static-cdn.jtvnw.net/emoticons/v1/301948074/3.0",
  },
]
`;
